--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Register, Login , And Logout page ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js -e js, ejs"
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+    
   },
   "author": "Ajay kumar",
   "license": "ISC",
