--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
     
   },
-  "author": "Ajay kumar",
+  "author": "hebbar",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
