--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Register, Login , And Logout page ",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node index.js -e js, ejs",
     "test": "echo \"Error: no test specified\" && exit 1"
     
   },
